--- a/index.html
+++ b/index.html
@@ -1,11 +1,107 @@
 <!DOCTYPE html>
-<html>
+<html lang="th">
 <head>
-  <meta charset="UTF-8">
-  <title>MRT Supplier</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>MRT Supplier Co., Ltd.</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      background: #f9f9f9;
+      color: #222;
+    }
+    header {
+      background: linear-gradient(135deg, #0a2540, #1a3b6d);
+      color: white;
+      text-align: center;
+      padding: 30px 20px;
+    }
+    header img {
+      max-width: 160px;
+      margin-bottom: 10px;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 2em;
+    }
+    header p {
+      margin: 6px 0 0;
+      font-size: 1.1em;
+      opacity: 0.9;
+    }
+    main {
+      max-width: 900px;
+      margin: 40px auto;
+      padding: 0 20px;
+      line-height: 1.6;
+    }
+    h2 {
+      color: #0a2540;
+      border-left: 6px solid #e63946;
+      padding-left: 10px;
+    }
+    .card {
+      background: white;
+      padding: 20px;
+      border-radius: 10px;
+      margin-bottom: 20px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    }
+    .btn {
+      display: inline-block;
+      margin-top: 10px;
+      padding: 10px 18px;
+      background: #e63946;
+      color: white;
+      text-decoration: none;
+      border-radius: 6px;
+      transition: 0.3s;
+    }
+    .btn:hover {
+      background: #c82333;
+    }
+    footer {
+      background: #0a2540;
+      color: white;
+      text-align: center;
+      padding: 15px;
+      margin-top: 40px;
+      font-size: 0.9em;
+    }
+  </style>
 </head>
 <body>
-  <h1>Welcome to MRT Supplier</h1>
-  <p>Industrial spare parts distributor</p>
+  <header>
+    <img src="logo.png" alt="MRT Supplier Logo">
+    <h1>MRT SUPPLIER</h1>
+    <p>Industrial Filters & Bearings Distributor</p>
+  </header>
+
+  <main>
+    <div class="card">
+      <h2>เกี่ยวกับเรา</h2>
+      <p>
+        MRT Supplier Co., Ltd. คือผู้จัดจำหน่ายอะไหล่อุตสาหกรรม 
+        <b>ไส้กรอง (Donaldson, MANN, Fleetguard)</b> 
+        และ <b>ตลับลูกปืนคุณภาพสูง (NTN, Koyo, IKO)</b> 
+        พร้อมบริการจัดส่งที่รวดเร็วและเชื่อถือได้
+      </p>
+    </div>
+
+    <div class="card">
+      <h2>ติดต่อเรา</h2>
+      <p>
+        📞 โทร: 081-5581323 <br>
+        ✉️ อีเมล: mrt-supplier@outlook.com <br>
+        📍 ที่อยู่: 15 ซอยบรมราชชนนี 39 ถนนบรมราชชนนี แขวงตลิ่งชัน เขตตลิ่งชัน กรุงเทพมหานคร 10170
+      </p>
+      <a class="btn" href="https://line.me/R/ti/p/~0815581323" target="_blank">แอด LINE</a>
+    </div>
+  </main>
+
+  <footer>
+    © 2025 MRT Supplier Co., Ltd. All rights reserved.
+  </footer>
 </body>
 </html>
